deploy/productpage/bookinfo-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: bookinfo
  namespace: bookinfo
spec:
  to:
    kind: Service
    name: productpage
    weight: 100
  port:
    targetPort: http
  wildcardPolicy: None
